# alonememo

./: .gitignore  README.md  app.py  pyproject.toml
templates/: index.html  login.html  register.html
tests/: conftest.py  test_api.py  test_memo.py
