[tool.poetry]
name = "alonememo"
version = "0.1.0"
description = ""
authors = ["jinhee yoo <epuni1717@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
